# RoomAgent

./: .env.example  .gitignore  CLAUDE.md  DEVLOG.md  PROJECT.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: new-handler.md  run.md
migrations/: 001_init.sql  002_chores.sql  003_settle.sql  004_onboarding.sql
src/: bot.py  config.py  db.py  llm.py  scheduler.py
src/handlers/: bills.py  chores.py  health.py  onboarding.py  settle.py  supplies.py
src/utils/: amazon.py  prefilter.py  retry.py  splits.py
tests/: test_chores.py  test_intent_parsing.py  test_onboarding.py  test_prefilter.py  test_settle.py  test_splits.py
